IPCS operation timeout when unplugging external monitor from TBT port if system is in PC6
This issue can be reproduced on hybird laptop (I+N) on my platform.
This issue can not be reproduced on UMA laptop (Intel only) on my platform.
Use the latest
drm-tip
branch
I'm not able to use drm-top to debug this issue because the nvidia driver is not able to compile with 5.18 drm. Thus, the rtd3 doesn't work on nvidia gpu which causing the system not able to enter PC6.
The hardware design of this hybrid platform has:
2 * TBT port: two USB-C port wiring to iGPU.
1 * MF port: an USB-C port wiring to dGPU.
When this issue happens, the MF port is not longer work and the kernel message shows:
kernel: nvidia 0000:01:00.0: can't change power state from D3cold to D0 (config space inaccessible)
because the BIOS is not able to power-up the root port of nvidia devices since the IPCS operation timeout.
[Steps to reproduce]
-
Install Ubuntu 22.04 LTS image..
-
Boot up the system.
-
Hot-plug in an external monitor via a type-c to HDMI adapter.
-
monitor /sys/kernel/debug/pmc_core/package_cstate_show and make sure the system entering C6.
-
Unplug external monitor from the system.
-
Screen freeze in 30 secs and can see the
kernel: ACPI Error: Aborting method \IPCS due to previous error (AE_AML_LOOP_TIMEOUT) (20211217/psparse-529
7. Attach the monitor to MF port.
[Expect result]
the MF port can output the contents
[Actual result]
the MF port doesn't work.
if poweroff the system, then the system will hang there.
How often does the steps listed above trigger the issue? For example: always, 1 out 3 times.
[Fail rate]
3/3
Which platforms and features are affected (if you can).
The problematic machine is ADL-P, not sure other generations.
The following information about your system:
System architecture: x86_64
Kernel version: 5.17.0+
5.17.0-1003-oem: failed
5.15.0-27-generic: failed
5.18-rc1+: failed # Got the 510.68.02 from nvidia website and it works based on 9cbbd694a58bdf24def2462276514c90cab7cf80 (before dma-buf API change) but in this version, the system is not able to enter PC6
Linux distribution: Ubuntu 22.04 LTS
Machine or mother board model: platform is not yet publish in marketing.
Display connector: HDMI over type-C